--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -1,9 +1,9 @@
 {
- "name": "Star Market",
+ "name": "Te Wāhi Auaha",
  "start_url": ".",
  "display": "standalone",
  "theme_color": "#000000",
- "background_color": "#F6B451",
+ "background_color": "#c4c4c2",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
