--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/styled-components": "^5.1.2",
     "@types/styled-system": "^5.1.10",
     "@types/yup": "^0.29.7",
+    "@vercel/analytics": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "@walletconnect/client": "^1.4.1",
